--- a/pom.xml
+++ b/pom.xml
@@ -15,38 +15,46 @@
 <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>2.6.7</version>
+    <version>2.6.3</version>
     <relativePath/>
 </parent>
 <dependencies>
     <dependency>
         <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter</artifactId>
+        <artifactId>spring-boot-starter-web</artifactId>
     </dependency>
+
+<!--    <dependency>-->
+<!--        <groupId>com.alibaba.boot</groupId>-->
+<!--        <artifactId>nacos-config-spring-boot-starter</artifactId>-->
+<!--        <version>0.2.10</version>-->
+<!--    </dependency>-->
+
     <dependency>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-test</artifactId>
         <scope>test</scope>
     </dependency>
-    <dependency>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-web</artifactId>
-    </dependency>
+
+
     <dependency>
         <groupId>com.baomidou</groupId>
         <artifactId>mybatis-plus-boot-starter</artifactId>
         <version>3.5.1</version>
     </dependency>
+
     <dependency>
         <groupId>org.projectlombok</groupId>
         <artifactId>lombok</artifactId>
         <optional>true</optional>
     </dependency>
+
     <dependency>
         <groupId>mysql</groupId>
         <artifactId>mysql-connector-java</artifactId>
         <scope>runtime</scope>
     </dependency>
+
     <dependency>
         <groupId>com.google.code.gson</groupId>
         <artifactId>gson</artifactId>
@@ -58,12 +66,87 @@
         <artifactId>springfox-swagger2</artifactId>
         <version>2.9.2</version>
     </dependency>
+
     <dependency>
         <groupId>io.springfox</groupId>
         <artifactId>springfox-swagger-ui</artifactId>
         <version>2.9.2</version>
     </dependency>
 
+<!--    <dependency>-->
+<!--        <groupId>org.projectlombok</groupId>-->
+<!--        <artifactId>lombok</artifactId>-->
+<!--        <version>1.18.8</version>-->
+<!--    </dependency>-->
+
+    <!-- https://mvnrepository.com/artifact/org.apache.httpcomponents/httpcore -->
+<!--    <dependency>-->
+<!--        <groupId>org.apache.httpcomponents</groupId>-->
+<!--        <artifactId>httpcore</artifactId>-->
+<!--        <version>4.4.12</version>-->
+<!--    </dependency>-->
+
+<!--    <dependency>-->
+<!--        <groupId>commons-lang</groupId>-->
+<!--        <artifactId>commons-lang</artifactId>-->
+<!--        <version>2.6</version>-->
+<!--    </dependency>-->
+
+<!--    <dependency>-->
+<!--        <groupId>javax.servlet</groupId>-->
+<!--        <artifactId>servlet-api</artifactId>-->
+<!--        <version>2.5</version>-->
+<!--        <scope>provided</scope>-->
+<!--    </dependency>-->
+
+    <!--服务注册/发现-->
+    <dependency>
+        <groupId>com.alibaba.cloud</groupId>
+        <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
+        <version>2021.0.1.0</version>
+    </dependency>
+
+    <!--配置中心来做配置管理-->
+    <dependency>
+        <groupId>com.alibaba.cloud</groupId>
+        <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
+        <version>2021.0.1.0</version>
+    </dependency>
+
+    <dependency>
+        <groupId>org.springframework.cloud</groupId>
+        <artifactId>spring-cloud-dependencies</artifactId>
+        <version>2021.0.1</version>
+        <type>pom</type>
+        <scope>import</scope>
+    </dependency>
+
+    <dependency>
+        <groupId>org.springframework.cloud</groupId>
+        <artifactId>spring-cloud-starter-bootstrap</artifactId>
+        <version>3.0.1</version>
+    </dependency>
+
+
+    <!--    <dependency>-->
+<!--        <groupId>javax.validation</groupId>-->
+<!--        <artifactId>validation-api</artifactId>-->
+<!--        <version>2.0.1.Final</version>-->
+<!--    </dependency>-->
 
 </dependencies>
+
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>com.alibaba.cloud</groupId>
+                <artifactId>spring-cloud-alibaba-dependencies</artifactId>
+                <version>2021.0.1.0</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
+
+
 </project>
