--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
     <maven.compiler.source>11</maven.compiler.source>
     <maven.compiler.target>11</maven.compiler.target>
 </properties>
+
 <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
@@ -126,6 +127,27 @@
         <artifactId>spring-cloud-starter-bootstrap</artifactId>
         <version>3.0.1</version>
     </dependency>
+
+    <!--feign-->
+    <dependency>
+        <groupId>org.springframework.cloud</groupId>
+        <artifactId>spring-cloud-starter-openfeign</artifactId>
+        <version>2.2.1.RELEASE</version>
+    </dependency>
+
+
+    <dependency>
+        <groupId>org.springframework.cloud</groupId>
+        <artifactId>spring-cloud-starter-netflix-ribbon</artifactId>
+        <version>2.2.9.RELEASE</version>
+    </dependency>
+
+<!--    <dependency>-->
+<!--        <groupId>org.springframework.cloud</groupId>-->
+<!--        <artifactId>spring-cloud-loadbalancer</artifactId>-->
+<!--        <version>3.0.0</version>-->
+<!--    </dependency>-->
+
 
 
     <!--    <dependency>-->
