--- a/src/main/resources/Application.yml
+++ b/src/main/resources/Application.yml
@@ -5,6 +5,7 @@ spring:
     username: demo
     password: '123'
     url: jdbc:mysql://127.0.0.1:3306/student?characterEncoding=UTF-8&serverTimezone=GMT%2B8
+    useSSL: false
     driver-class-name: com.mysql.cj.jdbc.Driver
 #  application:
 #    name: studentSystem
